RESOLVED FIXED68877
[V8] element.dataset.nonExistingKey should return undefined.
https://bugs.webkit.org/show_bug.cgi?id=68877
Summary [V8] element.dataset.nonExistingKey should return undefined.
Attachments
Patch (3.54 KB, patch)
2011-09-27 00:52 PDT, Kent Tamura
no flags
Kent Tamura
Comment 1 2011-09-27 00:52:29 PDT
WebKit Review Bot
Comment 2 2011-09-27 16:04:09 PDT
Comment on attachment 108805 [details] Patch Clearing flags on attachment: 108805 Committed r96166: <http://trac.webkit.org/changeset/96166>
WebKit Review Bot
Comment 3 2011-09-27 16:04:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.