[V8] element.dataset.nonExistingKey should return undefined. https://bugs.webkit.org/show_bug.cgi?id=68877

Reviewed by Nate Chapin.

Source/WebCore:

* bindings/v8/custom/V8DOMStringMapCustom.cpp:
(WebCore::V8DOMStringMap::namedPropertyGetter): Uses v8StringOrUndefined() instead of v8String().

LayoutTests:

* fast/dom/dataset-expected.txt: Updated.
* fast/dom/script-tests/dataset.js: Add a test case.


Canonical link: https://commits.webkit.org/84935@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96166 268f45cc-cd09-0410-ab3c-d52691b4dbfc